tests/outref/TSC06.ref
OCTO> SELECT invalid from (SELECT invalid from (SELECT invalid from names));
[ERROR] PATH:LINENUM DATE TIME : Unknown column: INVALID
Error with syntax near (line 1, column 49):

SELECT invalid from (SELECT invalid from (SELECT invalid from names));
                                                 ^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: SELECT invalid from (SELECT invalid from (SELECT invalid from names));

OCTO> 
